xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__bitmask_def.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
bitmask_def.rs
===============
//! Generated by xidlc.
//! xidlc_version: 0.1.0
//! xidlc_timestamp: 1970-01-01 00:00
#![allow(dead_code)]
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]

use std::collections::BTreeMap;
use std::ffi::c_void;
pub struct A{
    pub value:u32,
}

impl A{
}

impl xidl_xcdr::XcdrSerialize for A{
    fn serialize_with<S:xidl_xcdr::XcdrSerializer+?Sized>(
    &self,
    serializer:&mut S,
    )->xidl_xcdr::error::XcdrResult<()>{
        xidl_xcdr::XcdrSerialize::serialize_with(&self.value,serializer)
    }
}

impl xidl_xcdr::XcdrDeserialize for A{
    fn deserialize<D:xidl_xcdr::XcdrDeserializer+?Sized>(
    deserializer:&mut D,
    )->xidl_xcdr::error::XcdrResult<Self>{
        let value = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;
        Ok(Self{
            value})
    }
}

pub struct A{
    pub value:u32,
}

impl A{
    pub const A:u32 = 1u32<<0;
    pub const B:u32 = 1u32<<1;
    pub const C:u32 = 1u32<<2;
}

impl xidl_xcdr::XcdrSerialize for A{
    fn serialize_with<S:xidl_xcdr::XcdrSerializer+?Sized>(
    &self,
    serializer:&mut S,
    )->xidl_xcdr::error::XcdrResult<()>{
        xidl_xcdr::XcdrSerialize::serialize_with(&self.value,serializer)
    }
}

impl xidl_xcdr::XcdrDeserialize for A{
    fn deserialize<D:xidl_xcdr::XcdrDeserializer+?Sized>(
    deserializer:&mut D,
    )->xidl_xcdr::error::XcdrResult<Self>{
        let value = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;
        Ok(Self{
            value})
    }
}

pub struct A{
    pub value:u32,
}

impl A{
    pub const A:u32 = 1u32<<0;
    pub const B:u32 = 1u32<<1;
    pub const C:u32 = 1u32<<2;
}

impl xidl_xcdr::XcdrSerialize for A{
    fn serialize_with<S:xidl_xcdr::XcdrSerializer+?Sized>(
    &self,
    serializer:&mut S,
    )->xidl_xcdr::error::XcdrResult<()>{
        xidl_xcdr::XcdrSerialize::serialize_with(&self.value,serializer)
    }
}

impl xidl_xcdr::XcdrDeserialize for A{
    fn deserialize<D:xidl_xcdr::XcdrDeserializer+?Sized>(
    deserializer:&mut D,
    )->xidl_xcdr::error::XcdrResult<Self>{
        let value = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;
        Ok(Self{
            value})
    }
}
