xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__const_dec.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_dec.rs
===============
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]

pub const a:i32 = 10;
