xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__const_hex.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_hex.rs
===============

//! Generated by xidlc.
#![allow(dead_code)]
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]

use std::collections::BTreeMap;
use std::ffi::c_void;



    pub const a: i32 = 0xff;
