xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__const_scoped_name.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_scoped_name.rs
===============
//! Generated by xidlc.
#![allow(dead_code)]
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]

use std::collections::BTreeMap;
use std::ffi::c_void;


pub const a: int = 0;
pub const a: u8 = 0;
pub const a: u16 = 0;
pub const a: u32 = 0;
pub const a: u64 = 0;
pub const a: i8 = 0;
pub const a: i16 = 0;
pub const a: i32 = 0;
pub const a: i64 = 0;
pub const a: char8 = 0;
pub const a: char16 = 0;
pub const C1: char = 'X';
pub const C2: char = 'X';
pub const C3: &'static str = "aaa";
pub const C3: &'static str = "aaa";
pub const C3: bool = r#false;
pub const a: A = 0;
pub const a: B = 0;
pub const a: C = 0;
pub const a: F = 0;
pub const MYSIZE: Size = medium;
pub const const_float: f64 = 13.1;
pub const const_double: f64 = 84.1;
pub const const_longdouble: f64 = 46.1;
