xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__enum_empty.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
enum_empty.rs
===============
//! Generated by xidlc.
#![allow(dead_code)]
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]

use std::collections::BTreeMap;
use std::ffi::c_void;


#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum A {

}

impl xidl_xcdr::XcdrSerialize for A {
    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        let value = *self as u32;
        xidl_xcdr::XcdrSerialize::serialize_with(&value, serializer)
    }
}

impl xidl_xcdr::XcdrDeserialize for A {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {
        let value: u32 = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;
        match value {

            _ => Err(xidl_xcdr::error::XcdrError::Message(format!(
                "invalid A discriminant: {}",
                value
            ))),
        }
    }
}

impl xidl_typeobject::XidlTypeObject for A {
    fn minimal_type_object() -> xidl_typeobject::DDS::XTypes::TypeObject {
        xidl_typeobject::runtime::build_minimal_enum(0u32, 32u16, vec![])
    }

    fn complete_type_object() -> xidl_typeobject::DDS::XTypes::TypeObject {
        xidl_typeobject::runtime::build_complete_enum("A", 0u32, 32u16, vec![])
    }
}
