xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__except_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
except_dcl.rs
===============

//! Generated by xidlc.
#![allow(dead_code)]
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]

use std::collections::BTreeMap;
use std::ffi::c_void;



    #[derive(Debug, Clone)]
pub struct HelloWorld {

    pub a: u8,

    pub b: [u16; 10],

    pub c: [[String; 20]; 10],

    pub c: Vec<u8>,

    pub d: String,

    pub d: String,

    pub d: f64,

}
